# core-text-runs

./: .gitignore  Cargo.toml  README-iOS.md
ios-app/CoreTextRunsProj/: CoreTextRuns-Bridging-Header.h
ios-app/CoreTextRunsProj/CoreTextRunsProj/: ContentView.swift  CoreTextRuns-Bridging-Header.h  CoreTextRunsProjApp.swift
ios-app/CoreTextRunsProj/CoreTextRunsProj.xcodeproj/: project.pbxproj
ios-app/CoreTextRunsProj/CoreTextRunsProj.xcodeproj/project.xcworkspace/xcuserdata/m3.xcuserdatad/: UserInterfaceState.xcuserstate
ios-app/CoreTextRunsProj/CoreTextRunsProj.xcodeproj/xcuserdata/m3.xcuserdatad/xcschemes/: xcschememanagement.plist
ios-app/CoreTextRunsProj/CoreTextRunsProjTests/: CoreTextRunsProjTests.swift
ios-app/CoreTextRunsProj/CoreTextRunsProjUITests/: CoreTextRunsProjUITests.swift  CoreTextRunsProjUITestsLaunchTests.swift
src/: lib.rs  main.rs
