[package]
name = "core-text-runs"
version = "0.1.0"
edition = "2021"

[lib]
name = "core_text_runs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "core-text-runs"
path = "src/main.rs"

[dependencies]
core-text = { version = "19.2" }
core-graphics = "0.22"
core-foundation = "0.9.0"
harfbuzz_rs = { version = "2.0.1", features = ["rusttype"] }
harfbuzz-sys = { version = "0.5", default-features = false }